--- a/vignettes/intro-to-gmvarkit.Rmd
+++ b/vignettes/intro-to-gmvarkit.Rmd
@@ -252,10 +252,12 @@ B_t=W(\alpha_{1,t}I_d + \sum_{m=2}^M\alpha_{m,t}\Lambda_m)^{1/2}
 which simultaneously diagonalizes $\Omega_1,...,\Omega_M$, and $\Omega_{u,t}$ for each $t$ so that $\text{Cov}(e_t|\mathcal{F}_{t-1})=I_d$. In `gmvarkit`, the B-matrix always has the above structure. 
 
 ## Identification of the structural shocks
-Even if all pairs of $\lambda_{mi}$ are distinct for some $m$, unique identification of $B_t$ requires deciding upon the ordering of $\lambda_{mi}$ in the diagonals of $\Lambda_m$ which fixes also the ordering of the columns of $W$. With an arbitrary ordering of the eigenvalues and eigenvectors, it is not guaranteed that the structural shocks have economic interpretations. However, after the statistical identification, overidentifying restrictions that lead economically interpretable structural shocks can be tested and thus validated statistically. Furthermore, it turns out that globally unique identification of the structural shocks can often be achieved with less restrictive constraints than in conventional SVAR models. The following proposition gives sufficient and necessary conditions for global identification of the shocks when all pairs of $\lambda_{mi}$ are distinct for some $m$.
+Even if all pairs of $\lambda_{mi}$ are distinct for some $m$, unique identification of $B_t$ requires deciding upon the ordering of $\lambda_{mi}$ in the diagonals of $\Lambda_m$ which fixes also the ordering of the columns of $W$. With an arbitrary ordering of the eigenvalues and eigenvectors, it is not guaranteed that the structural shocks have economic interpretations. However, after the statistical identification, overidentifying restrictions that lead economically interpretable structural shocks can be tested and thus validated statistically.
+
+It turns out that globally unique identification of the structural shocks can often be achieved with less restrictive constraints than in conventional SVAR models. In practice, however, one is often interested in identifying only some specific shock or shocks (such as a monetary policy shock, for instance), so it makes sense to consider only partial identification of the B-matrix as well. In particular, we say that the $j$th structural shock is uniquely identified if the $j$th column of the B-matrix is unique for given mixing weights $\alpha_{1,t},...,\alpha_{M,t}$. This requires that the $j$th columns of $W$ and $\Lambda_m$, $m=2,..,M$, are unique. Note that the economic shock to which the $j$th structural shock relates to does not depend on any particular ordering of the structural shocks (which may be arbitrary) but instead on the specific constraints that only the shock of interest satisfies. The following proposition gives sufficient and necessary conditions for global identification of the last $d_1$ shocks when the related pairs of $\lambda_{mi}$ are distinct for some $m$. The following proposition gives sufficient and necessary conditions for global identification of the last $d_1$ shocks when all pairs of $\lambda_{mi}$ are distinct for some $m$.
 
 #### Proposition 1
-Suppose $\Omega_1=WW'$ and $\Omega_m=W\Lambda_mW', \ \ m=2,...,M,$ where $\Lambda_m=\text{diag}(\lambda_{m1},...,\lambda_{md})$, $\lambda_{mi}>0$ ($i=1,...,d$), contains the eigenvalues of $\Omega_m\Omega_1^{-1}$ in the diagonal and the columns of the nonsingular $W$ are the related eigenvectors. Then, the last $d_1$ structural shocks are uniquely identified^[We say that the $j$th structural shock is uniquely identified the $j$th column of the B-matrix is unique for given mixing weights $\alpha_{1,t},...,\alpha_{M,t}$. This requires that the $j$th columns of $W$ and $\Lambda_m$, $m=2,..,M$, are unique. Identification of all the shocks is thus equivalent to uniqueness of the employed decomposition of $\Omega_1,...,\Omega_M$. Note that the economic shock to which the $j$th structural shock relates to does not depend on any particular ordering of the structural shocks but instead on the specific constraints that only the shock of interest satisfies.] if 
+Suppose $\Omega_1=WW'$ and $\Omega_m=W\Lambda_mW', \ \ m=2,...,M,$ where $\Lambda_m=\text{diag}(\lambda_{m1},...,\lambda_{md})$, $\lambda_{mi}>0$ ($i=1,...,d$), contains the eigenvalues of $\Omega_m\Omega_1^{-1}$ in the diagonal and the columns of the nonsingular $W$ are the related eigenvectors. Then, the last $d_1$ structural shocks are uniquely identified if 
 
 1. for all $j > d-d_1$ and $i\neq j$ there exists an $m\in \lbrace 2,...,M \rbrace$ such that $\lambda_{mi} \neq \lambda_{mj}$,
 
@@ -263,7 +265,7 @@ Suppose $\Omega_1=WW'$ and $\Omega_m=W\Lambda_mW', \ \ m=2,...,M,$ where $\Lambd
 
 3. there is at least one (strict) sign constraint in each of the last $d_1$ columns of $W$.
 
-\noindent Notice that changing all signs in a column of $W$ merely switches the sign of the corresponding shock and condition (3) of Proposition \ref{prop:ident1} can therefore be always satisfied without loss of generality. The assumption that the identified shocks are the last $d_1$ shocks is neither restrictive as one may always reordering the variables (or just the structural shocks) accordingly. 
+\noindent Notice that changing all signs in a column of $W$ merely switches the sign of the corresponding shock and condition (3) of Proposition \ref{prop:ident1} can therefore be always satisfied without loss of generality. The assumption that the identified shocks are the last $d_1$ shocks is neither restrictive as one may always reorder the structural shocks (and possibly the variables) accordingly. 
 
 For example, if $d=3$, $\lambda_{m1}\neq\lambda_{m3}$ for some $m$, and $\lambda_{m2}\neq\lambda_{m3}$ for some $m$, the third structural shock can be identified with the following constraints:
 $$
